home gui and other fixes